# 3d-game

./: .gitmodules  CMakeLists.txt  main.cpp
assets/: fragment.glsl  vertex.glsl
assets/shaders/: cube.fs  cube.vs  fragment.glsl  light.fs  outline.fs  outline.vs  vertex.glsl
src/: Main.cpp
src/Core/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shaders.cpp  Shaders.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/Debug/: Log.cpp  Log.hpp
